--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
       
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
+
+      <ul>
+        <button type="submit">Sign Up</button>
+        <li><a href="thank-you.html">Thank you</a></li>
+      </ul>
       
-      <button type="submit">Sign Up</button>
     </form>
   </main>
 </body>
