--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Sign up to be a part of our software's exclusive testing team and help us make it great.</p>
   </header>
   <main>
-    <form id="signup-form">
+    <form id="signup-form" method="GET" action="thank-you.html">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
       
