--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <ul>
         <button type="submit">Sign Up</button>
-        <li><a href="thank-you.html">Thank you</a></li>
+        <a href="thank-you.html">Thank you</a>
       </ul>
       
     </form>
