--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
       
-      <!-- Changed <ul> to <div> as instructed from basecamp feedback -->
+    <!-- Removed the unnecessary <a> link after trying to make the submit button take the user to the thank-you page -->
       <div>
-        <button type="submit">Sign Up</button>
-        <a href="thank-you.html">Thank you</a>
+        <button type="submit">Sign Up</button> <!-- Submit button redirects to thank-you.html -->
       </div>
     </form>
   </main>
