--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <header>
     <h1>Join Our Beta Test!</h1>
-    <p>Sign up to be a part of our software's exclusive testing team and help us make it great.</p>
+    <p style="color: white;">Sign up to be a part of our software's exclusive testing team and help us make it great.</p> <!-- Made the text color white to make it look nicer with the new background -->
   </header>
   <main>
-    <form id="signup-form" method="GET" action="thank-you.html" autocomplete="on"> <!-- Autocomplete attribute now added -->
+    <form id="signup-form" method="GET" action="thank-you.html" autocomplete="on"> <!-- Added the autocomplete attribute -->
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
       
